# notashark

./: .gitignore  Dockerfile  README.md  bootin_up.sh  dev-requirements.txt  launcher.sh  notashark.py  pyproject.toml  requirements.txt  run_notashark  setup.py
notashark/: __init__.py  __main__.py  cli.py  configuration.py  data_fetcher.py  discord_bot.py  embeds.py  embeds_processor.py  fetcher.py  settings.py  settings_fetcher.py
notashark/src/: __init__.py  discord_bot.py  embeds.py  fetcher.py  parts.py  settings.py
