[project]
name = "notashark"
version = "1.0.1"
description = "notashark - a discord bot for King Arthur's Gold"
readme = "README.md"
authors = [
    {name = "moonburnt", email = "moonburnt@disroot.org"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

requires-python = ">=3.8"

dependencies = [
    "discord.py==1.7.3",
    "requests>=2.25.1",
    "pykagapi==0.2.1",
]


[project.urls]
homepage = "https://github.com/moonburnt/notashark"


[project.scripts]
notashark = "notashark:cli.main"


[project.optional-dependencies]
dev = [
    "black==22.10.0",
]


[tool.setuptools]
py-modules = [
    "notashark",
]


[tool.black]
line-length = 80
include = '(?:notashark|directory2)\/.*\.pyi?$'
